[package]
name = "api-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
tokio = "1.28.0"
db = { path = "../api-core/db" }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "offline"] }

